[package]
name = "hernoem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
audiotags = "0.4.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
